2006-12-27  Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-data-model-import.c:
	(gda_data_model_import_set_property): Replace use of deprecated 
	sys_errlist() with strerror(). Patch from Joseph Sacco in bug #353729. 

2006-12-27  Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-connection.c:
	* libgda/gda-data-model.c: (gda_data_model_import_from_model):
	* providers/firebird/firebird_specs_dsn.xml.in:
	* providers/freetds/freetds_specs_dsn.xml.in:
	* providers/ldap/ldap_specs_dsn.xml.in:
	* providers/mdb/mdb_specs_dsn.xml.in:
	* providers/msql/msql_specs_dsn.xml.in:
	* providers/mysql/mysql_specs_create_db.xml.in:
	* providers/mysql/mysql_specs_drop_db.xml.in:
	* providers/mysql/mysql_specs_dsn.xml.in:
	* providers/oracle/oracle_specs_dsn.xml.in:
	* providers/postgres/postgres_specs_create_db.xml.in:
	* providers/postgres/postgres_specs_drop_db.xml.in:
	* providers/postgres/postgres_specs_dsn.xml.in:
	* providers/sybase/sybase_specs_dsn.xml.in:
	* providers/xbase/xbase_specs_dsn.xml.in:
	Correct spellings and grammar in translatable strings. 
	Suggestions by  Clytie Siddall in bug #352122.

2006-12-27  Murray Cumming  <murrayc@murrayc.com>

	* Makefile.am:
	* configure.in:
	* libgda-3.0.pc.in:
	* libgda/Makefile.am:
	* libgda/graph/Makefile.am:
	* libgda/handlers/Makefile.am:
	* libgda/sql-delimiter/Makefile.am:
	* libgda/sql-transaction/Makefile.am:
	* libsql/Makefile.am:
	- Rename libsqltransaction.la to libgda_sql_transaction-3.0.la.  Add it to
libgda-3.0.pc.in.  Build it and libgda_sql_delimiter-3.0 before libgda-3.0,
since the former are not interdependent with the latter.
	- Rename libgdasql.la to libgdasql-3.0.la.  Add it to libgda-3.0.pc.in.
	* providers/bdb/Makefile.am:
	* providers/firebird/Makefile.am:
	* providers/freetds/Makefile.am:
	* providers/freetds/gda-freetds-provider.c:
	(gda_freetds_free_connection_data):
	* providers/ibmdb2/Makefile.am:
	* providers/ldap/Makefile.am:
	* providers/mdb/Makefile.am: