@@ -13,7 +13,7 @@
     <!-- DSN parameters -->
   <parameters id="DB_DEF_P" _name="Database's description">
     <parameter id="DB_NAME" _name="Database name" _descr="The name of a database to create" gdatype="gchararray" nullok="FALSE"/>
-    <parameter id="DB_IFNOTEXISTS" _name="Only if not exists" _descr="Create database only if it does not yet exist" gdatype="gboolean"/>
+    <parameter id="DB_IFNOTEXISTS" _name="Only if it does not yet exist" _descr="Create database only if it does not yet exist" gdatype="gboolean"/>
     <parameter id="DB_CSET" _name="Character set" _descr="Character set encoding to use in the new database" gdatype="gchararray" source="csets:0"/>
     <parameter id="DB_COLLATION" _name="Collation" _descr="Collation method to use in the new database" gdatype="gchararray"/>
   </parameters>
