@@ -13,6 +13,6 @@
     <!-- DSN parameters -->
   <parameters id="DB_DESC_P" _name="Database's description">
     <parameter id="DB_NAME" _name="Database name" _descr="The name of a database to create" gdatype="gchararray" nullok="FALSE"/>
-    <parameter id="DB_IFEXISTS" _name="Only if exists" _descr="Drop database only if it exists" gdatype="gboolean"/>
+    <parameter id="DB_IFEXISTS" _name="Only if existing" _descr="Drop database only if it exists" gdatype="gboolean"/>
   </parameters>
 </serv_op>
