@@ -6,7 +6,7 @@
     </parameter>
     <parameter id="INDEX_NAME" _name="Name" _descr="Index name" gdatype="gchararray" nullok="FALSE"/>
     <parameter id="INDEX_ON_TABLE" _name="On table" gdatype="gchararray" nullok="FALSE" source="_DICT_TABLES_"/>
-    <parameter id="INDEX_IFNOTEXISTS" _name="Only if not exists" _descr="Create index only if it does not yet exist" gdatype="gboolean">
+    <parameter id="INDEX_IFNOTEXISTS" _name="Only if it does not yet exist" _descr="Create index only if it does not yet exist" gdatype="gboolean">
       <gda_value>FALSE</gda_value>
     </parameter>
   </parameters>
