@@ -1,5 +1,16 @@
 2006-12-27  Murray Cumming  <murrayc@murrayc.com>
 
+	* providers/mysql/mysql_specs_create_db.xml.in:
+	* providers/mysql/mysql_specs_create_table.xml.in:
+	* providers/mysql/mysql_specs_drop_db.xml.in:
+	* providers/postgres/postgres_specs_create_table.xml.in:
+	* providers/sqlite/sqlite-src/os.h:
+	* providers/sqlite/sqlite_specs_create_index.xml.in:
+	* providers/sqlite/sqlite_specs_create_table.xml.in:
+	More spelling and grammar fixes from Clytie Siddall in bug #352122.
+
+2006-12-27  Murray Cumming  <murrayc@murrayc.com>
+
 	* libgda/gda-data-model-import.c:
 	(gda_data_model_import_set_property): Replace use of deprecated 
 	sys_errlist() with strerror(). Patch from Joseph Sacco in bug #353729. 
